<resources>
    <string name="app_name">SingleLine Note</string>

    <!-- memo main -->
    <string name="toolbar_title_main">Note List</string>
    <string name="search_memo_hint">search notes</string>
    <string name="memo_edit_cancel">cancel</string>
    <string name="memo_delete_confirm">delete</string>
    <string name="memo_edit_guide">Please select notes to delete</string>

    <!-- dialog_delete memo -->
    <string name="dialog_memo_delete_title">Are you sure you want to delete the selected notes?</string>
    <string name="dialog_memo_delete_confirm">delete</string>
    <string name="dialog_memo_delete_cancel">cancel</string>

    <!-- memo create -->
    <string name="memo_create_toolbar_title">Create Note</string>
    <string name="memo_create_confirm">complete</string>
    <string name="memo_create_title">title</string>
    <string name="memo_create_suffix">unit</string>
    <string name="memo_create_title_hint">Please enter a title.</string>
    <string name="memo_create_suffix_hint" translatable="false">ex) $, EA</string>

    <!-- memo edit define -->
    <string name="memo_modify_toolbar_title">Edit Note</string>

    <string name="dialog_cancel">cancel</string>
    <string name="dialog_delete">delete</string>

    <!-- memo detail -->
    <string name="memo_status_sum">sum</string>
    <string name="memo_status_avg">avg</string>
    <string name="memo_status_max">max</string>
    <string name='memo_status_min'>min</string>

    <!-- memo modify items -->
    <string name="memo_modify_insert_row">Insert row</string>
    <string name="memo_modify_remove_row">Remove</string>
    <string name="memo_modify_confirm">complete</string>
    <string name="memo_modify_cancel">cancel</string>
    <string name="memo_status_items">rows</string>

    <!-- admob -->
    <string name="admob_app_id" translatable="false">ca-app-pub-2460925649047408~7202345125</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-2460925649047408/5889263458</string>
    <string name="admob_front_id" translatable="false">ca-app-pub-2460925649047408/6441859426</string>
    <!-- admob test -->
    <string name="admob_banner_test_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_front_test_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

</resources>