<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.gimangi.singleline_note.ui.memo.MemoCreateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.memo.MemoCreateActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar_memo_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/main">

            <ImageButton
                android:id="@+id/ib_toolbar_back"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_toolbar_title_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                android:fontFamily="@font/noto_sans_kr"
                android:includeFontPadding="false"
                android:text="@string/memo_create_toolbar_title"
                android:textColor="@color/white"
                android:textFontWeight="500"
                android:textSize="16sp"
                android:layout_marginStart="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ib_toolbar_back"
                app:layout_constraintTop_toTopOf="parent" />

            <android.widget.Button
                android:id="@+id/btn_memo_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memo_create_confirm"
                android:fontFamily="@font/noto_sans_kr"
                android:includeFontPadding="false"
                android:textFontWeight="500"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_marginEnd="20dp"
                setButtonEnable="@{viewModel.allTextNotEmpty}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_memo_create_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginStart="15dp"
            android:text="@string/memo_create_title"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/noto_sans_kr"
            android:textFontWeight="400"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_toolbar_memo_create" />

        <com.gimangi.singleline_note.ui.shared.SlnEditText
            android:id="@+id/et_new_memo_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="15dp"
            slnEditTextHint="@{@string/memo_create_title_hint}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_memo_create_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_memo_create_title" />

        <TextView
            android:id="@+id/tv_memo_create_suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/noto_sans_kr"
            android:includeFontPadding="false"
            android:text="@string/memo_create_suffix"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="14sp"
            android:layout_marginTop="38dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_new_memo_title" />

        <com.gimangi.singleline_note.ui.shared.SlnEditText
            android:id="@+id/et_new_memo_suffix"
            slnEditTextHint="@{@string/memo_create_suffix_hint}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_memo_create_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_memo_create_suffix" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>