<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.gimangi.singleline_note.ui.memo.MemoDetailViewModel" />
        <variable
            name="adapter"
            type="com.gimangi.singleline_note.adapter.MemoItemListAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/detail_background"
        tools:context=".ui.memo.MemoDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar_memo_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_toolbar_back"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="5dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_toolbar_title_memo_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/noto_sans_kr"
                android:includeFontPadding="false"
                android:text="@{viewModel.memoTableName}"
                android:textColor="@color/white"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ib_toolbar_back"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="메모 이름" />

            <ImageButton
                android:id="@+id/ib_edit_memo_define"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="18dp"
                android:src="@drawable/ic_edit_file"
                android:background="@android:color/transparent"
                setVisible="@{!adapter.modifyMode}"/>

            <ImageButton
                android:id="@+id/ib_edit_memo_list"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ib_edit_memo_define"
                android:background="@android:color/transparent"
                android:layout_marginEnd="18dp"
                android:src="@drawable/ic_edit"
                setVisible="@{!adapter.modifyMode}"/>

            <TextView
                android:id="@+id/btn_modify_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="18dp"
                android:text="@string/memo_modify_confirm"
                setVisible="@{adapter.modifyMode}"
                android:textSize="12sp"
                android:fontFamily="@font/noto_sans_kr"
                android:includeFontPadding="false"
                android:textFontWeight="500"
                android:textColor="@color/white"
                tools:visibility="invisible"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/admob_banner_test_id"
            app:layout_constraintTop_toBottomOf="@+id/cl_toolbar_memo_detail" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_summary_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_bright"
            app:layout_constraintTop_toBottomOf="@+id/adView_banner">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_select_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="11dp"
                android:layout_marginStart="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_summary_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_kr"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="12sp"
                    android:text="@{viewModel.selectedSummary}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="합계" />

                <ImageButton
                    android:id="@+id/ib_select_summary_type"
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_down"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_summary_selected"
                    app:layout_constraintStart_toEndOf="@+id/tv_summary_selected"
                    app:layout_constraintTop_toTopOf="@+id/tv_summary_selected" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_summary_value"
                setTextLong="@{viewModel.summary}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="11dp"
                android:layout_marginEnd="3dp"
                android:fontFamily="@font/noto_sans_kr"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_suffix_value"
                app:layout_constraintEnd_toStartOf="@+id/tv_suffix_value"
                app:layout_constraintTop_toTopOf="@+id/tv_suffix_value"
                tools:text="1,000,000" />

            <TextView
                android:id="@+id/tv_suffix_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr"
                android:textFontWeight="400"
                android:textColor="@color/white"
                android:includeFontPadding="false"
                android:textSize="12sp"
                android:layout_marginEnd="14dp"
                android:layout_marginVertical="11dp"
                android:text="@{viewModel.suffix}"
                tools:text="원"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/sv_memo_rows"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_summary_box"
            app:layout_constraintBottom_toTopOf="@id/cl_edit_box">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_scroll_rows"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_memo_item_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    tools:listitem="@layout/item_memo_items_list"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_add_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray2"
                    setGone="@{!adapter.modifyMode}"
                    app:layout_constraintTop_toBottomOf="@id/rv_memo_item_list">

                    <ImageView
                        android:id="@+id/iv_new_row"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginVertical="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/ic_down_arrow"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            setGone="@{adapter.modifyMode}"
            tools:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/main">

            <TextView
                android:id="@+id/btn_insert_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/memo_modify_insert_row"
                android:fontFamily="@font/noto_sans_kr"
                android:textFontWeight="500"
                android:textSize="12sp"
                android:enabled="true"
                android:textColor="@drawable/selector_color_dark_to_white_enable"
                android:includeFontPadding="false"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/btn_remove_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr"
                android:includeFontPadding="false"
                android:text="@string/memo_modify_remove_row"
                android:textColor="@color/red"
                android:textFontWeight="500"
                android:textSize="12sp"
                android:layout_marginEnd="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

